Implement workspace authorization and security features